--- a/ReactDemo/package.json
+++ b/ReactDemo/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@draft-js-plugins/alignment": "^5.0.4",
+    "@draft-js-plugins/drag-n-drop": "^4.2.3",
+    "@draft-js-plugins/drag-n-drop-upload": "^4.2.4",
     "@draft-js-plugins/editor": "^4.1.3",
     "@draft-js-plugins/emoji": "^4.6.5",
+    "@draft-js-plugins/focus": "^4.1.5",
+    "@draft-js-plugins/image": "^4.1.4",
     "@draft-js-plugins/mention": "^5.2.1",
+    "@draft-js-plugins/resizeable": "^5.0.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
