--- a/reactts/package.json
+++ b/reactts/package.json
@@ -13,7 +13,8 @@
     "antd-mobile": "^5.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.9.4",
